tests/paczka1/fuzzy1/12678116.err
Error in line 15: jXQzaS A805 33,9
Error in line 14: kqDxUq S97 76,6
Error in line 20: AOgUr S249 x05,x
Error in line 8: AOgUr S249 51,0
Error in line 33: AOgUr A243 14,18
